--- a/FirstFlexArduino/ComandLine.html
+++ b/FirstFlexArduino/ComandLine.html
@@ -1,3 +1,14 @@
+//iMac Cabana
+
 cd /Applications/Adobe\ Flash\ Builder\ 4.6/sdks/4.6/bin
 
 ./adl -profile extendedDesktop -extdir /Users/iMacPabloCabana/Documents/CabanaGits/ARDUINO-KINECT/FirstFlexArduino/libs/uncompressedANE /Users/iMacPabloCabana/Documents/CabanaGits/ARDUINO-KINECT/FirstFlexArduino/bin-debug/FlashArduino1-app.xml
+
+
+
+
+///macbook air pablo
+
+cd /Applications/Adobe\ Flash\ Builder\ 4.6/sdks/AIR3SDK/bin
+
+./adl -profile extendedDesktop -extdir /Users/pablo/Documents/CabanaGits/ExperimentosArduinoKinect/FirstFlexArduino/libs/uncompressedANE  /Users/pablo/Documents/CabanaGits/ExperimentosArduinoKinect/FirstFlexArduino/bin-debug/FlashArduino1-app.xml
